--- a/views/administrator/company_add.html
+++ b/views/administrator/company_add.html
@@ -70,47 +70,26 @@
             <div class="body teacher">
                 <!-- 面包屑 -->
                 <ol class="breadcrumb">
-                    <li><a href="javascript:;">讲师管理</a></li>
-                    <li class="active">应聘者添加</li>
+                    <li class="active"><a href="">公司添加</a></li>
                 </ol>
                 <div class="teacher-add">
                     <form action="" class="form-horizontal col-xs-offset-2" id="formId">
                         <div class="form-group">
-                            <label for="" class="col-xs-3 control-label">姓名</label>
+                            <label for="" class="col-xs-3 control-label">邮箱</label>
                             <div class="col-xs-4">
-                                <input type="text" class="form-control input-sm" placeholder="讲师名称" name="tc_name">
+                                <input type="text" class="form-control input-sm" placeholder="请输入邮箱" name="email">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="" class="col-xs-3 control-label">密码</label>
                             <div class="col-xs-4">
-                                <input type="password" class="form-control input-sm" name="tc_pass">
+                                <input type="password" class="form-control input-sm" name="tc_pass" placeholder="请输入密码">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="" class="col-xs-3 control-label">入职时间</label>
+                            <label for="" class="col-xs-3 control-label">昵称</label>
                             <div class="col-xs-4">
-                                <input type="text" class="form-control input-sm" name="tc_join_date">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="" class="col-xs-3 control-label">类型</label>
-                            <div class="col-xs-2">
-                                <select name="" class="form-control input-sm">
-                                    <option value="" name="tc_type">讲师</option>
-                                    <option value="" name="tc_type">管理员</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="" class="col-xs-3 control-label">性别</label>
-                            <div class="col-xs-4">
-                                <label class="radio-inline">
-                                    <input type="radio" checked name="tc_gender"> 男
-                                </label>
-                                <label class="radio-inline">
-                                    <input type="radio" name="tc_gender"> 女
-                                </label>
+                                <input type="text" class="form-control input-sm" placeholder="请输入昵称" name="email">
                             </div>
                         </div>
                         <div class="form-group">
