--- a/views/applicant/detail.html
+++ b/views/applicant/detail.html
@@ -7,14 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="/public/assets/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="/public/css/base.css">
+    <link rel="stylesheet" href="/public/css/common/base.css">
+    <link rel="stylesheet" href="/public/css/applicant/detail.css">
 </head>
 
+
 <body>
-    <!--header部分开始-->
     <header>
-
-
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -28,13 +27,13 @@
                     <ul class="nav navbar-nav navbar-right">
 
                         <form class="navbar-form navbar-left">
-                            <a href="/login" class="btn ">登陆</a>
+                            <a href="/login" class="btn ">登录</a>
                             <a href="/register" class="btn ">注册</a>
                         </form>
 
 
                         <li><a href="/logout">退出</a></li>
-                        <li><a href="/require">招聘要求</a></li>
+                        <li><a href="/resume">简历</a></li>
 
                     </ul>
                 </div>
@@ -42,12 +41,95 @@
             </div>
             <!-- /.container-fluid -->
         </nav>
-
-
     </header>
-    <!--header部分结束-->
+    <!--search部分开始-->
+    <div class="search container">
+        <div class="search-left">同城家教</div>
+    </div>
+    <!--search部分结束-->
+    <div class="content container">
+        <div class="main-content">
+            <div class="detail-main">
+                <div style="text-align:center;margin-bottom:10px;">
+                    <script type="text/javascript" src="/public/js/detail.js"></script>
+                </div>
+                <div class="main-l">
+                    <div class="detail-con" style="margin-top:0">
+                        <div style=" margin:0 auto; width:780px;">
+                            <div class="infoTitle-zp">
+                                <div class="title-time">
+                                    <h1 class="detail-title">招聘有经验的语文老师</h1>
+                                    <div class="title-bot"><span class="tb-other">2017-03-30</span>
 
-    <!-- footer部分开始 -->
+                                    </div>
+                                </div>
+                                <div class="companyInfo-zp">
+                                    <span class="companyName"><a href="#" target="_blank">南京名思堂教育信息咨询有限公司江阴分公司</a></span>
+
+                                    <span class="companyIcon"><span class="nozhizhao_rz" style="margin-left:5px;" title="营业执照未认证"></span>
+                                    </span>
+
+                                </div>
+                                <div class="companyOther">
+                                    <span>公司行业：教育/科研/培训</a></span>
+                                    <span>公司性质：私营</span>
+                                    <span>公司规模：1-49人</span>
+                                </div>
+                            </div>
+
+                            <div class="detail-table clearfix" style="margin-top:10px;">
+                                <dl class="fl">
+                                    <dt>
+                                    <ul>
+                                        <li>薪资待遇：面议</li>
+                                    </ul>
+                                </dt>
+                                    <dd>
+                                        <ul>
+                                            <li>学历要求：本科</li>
+                                            <li>招聘人数：5人</li>
+                                        </ul>
+                                    </dd>
+                                    <dd>
+                                        <ul>
+                                            <li>工作年限：不限</li>
+                                        </ul>
+                                    </dd>
+                                    <dd>
+                                        联系方式：2394359569
+                                    </dd>
+                                </dl>
+
+                            </div>
+                            <div class="applyJob">
+                                <a class="sq-submiter" href="javascript:void(0);" onclick="applyWork(25997067);">立即申请</a>
+                            </div>
+
+                            <div class="about-zp">
+                                <ul class='about-dh'>
+                                    <li class="current">职位描述</li>
+                                    <!--<li>公司其他职位</li>-->
+                                </ul>
+                                <div class="about-lr">
+                                    <div>
+                                        <div>岗位介绍： <br /> 1、负责语文日常的辅导工作和专业的​‌‌1对1教学，帮助学生克服学习难点，改掉不良学习习惯 <br /> 岗位要求： <br /> 1、表达能力优秀，普通话标准，思维灵活，富有亲和力，有耐心，有责任心，有师德，擅长与学生进行沟通交流 <br /> 2、有教师资格证者优先 <br /> 3、有授课、辅导、家教经验、学校教学经验或培训机构任教者优先 <br /> 工作时间: <br /> 周二至周五13：00-21：00
+                                            <br /> 周六至周日8：00-17：00
+                                        </div>
+                                        <div class="abouts-c">
+                                            <p class="dt">公司介绍</p>
+                                            <div class="">名思教育集团成立于2003年，是一家专门从事中小学生课外辅导的大型教育机构，拥有科学的教育体系、优秀的教师队伍和先进的管理团队，从早期的教育软件开发、“一对多”辅导发展到今天“优秀教师一对一”个性化辅导。名思教育在全国拥有100多个个性化学习中心，目前已经在南京、合肥、无锡、常州、南通、芜湖、马鞍山、江阴、宜兴、镇江、张家港、嘉兴、桐乡、湖州、绍兴等40多个城市设立学习中心。名思教育坚持请最有实力的教师，运用最先进的教育理念，最科学的教育模式竭诚为中小学生提供优质的教育服务。</div>
+                                        </div>
+                                    </div>
+
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer>
         <div id="right_noborder" class="foot_info container">
             <p class="right_channel">中国家教人才招聘频道介绍：欢迎您访问中国人才网的 . 中国 . 家教 .招聘频道。中国招聘频道免费为中国家教的人才和招聘单位提供家教招聘信息查询和发布服务，是寻找和发布中国家教人才求职和招聘信息的最佳专业的人才网站。欢迎提出宝贵的意见。最新中国家教人才招聘信息：1.招聘有经验的语文老师2.6000急聘会英语住家家教和早教师3.招聘初高中各科兼职老师4.高新诚聘辅导教师5.招聘围棋象棋兼职老师 移动终端请访问<a href="http://m.liebiao.com/_zhaopin/jiajiaolaoshi/">家教招聘</a>移动版</p>
@@ -92,8 +174,7 @@
             <a href="http://yantai.zhaopin.liebiao.com/jiajiaolaoshi/">烟台家教招聘</a>
         </p>
 
-        </div>
-        </div>
+
         <div class="bottom-bg">
             <div class="footer">
                 <div class="bottom_nav">
@@ -110,8 +191,9 @@
 
 
 
+
     </footer>
-    <!-- footer部分结束 -->
+
 </body>
 
 </html>
