--- a/views/applicant/main.html
+++ b/views/applicant/main.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>同城家教首页</title>
     <link rel="stylesheet" href="/public/assets/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="/public/css/base.css">
-    <link rel="stylesheet" href="/public/css/main.css">
+    <link rel="stylesheet" href="/public/css/common/base.css">
+    <link rel="stylesheet" href="/public/css/applicant/main.css">
     <!--header部分开始-->
     <header>
 
