--- a/views/applicant/resume.html
+++ b/views/applicant/resume.html
@@ -112,7 +112,12 @@
                             <span class="com-title">自我介绍</span>
                             <div class="self-wrap">
                                 <textarea class="self-content" id="txtIntrodSelf" maxlength="500" name="selfIntroduction"></textarea>
-                                <p class="hint-tips">还可以输入<span class="orange-font" id="totalNum">500</span>个字</p>
+                            </div>
+                        </li>
+                        <li class="self cate-list">
+                            <span class="com-title">工作经历</span>
+                            <div class="self-wrap">
+                                <textarea class="self-content" id="txtIntrodSelf" maxlength="500" name="selfIntroduction"></textarea>
                             </div>
                         </li>
                     </ul>
