--- a/public/css/common/base.css
+++ b/public/css/common/base.css
@@ -268,5 +268,17 @@ footer p {
     }
 }
 
+.search .search-left {
+    font-family: Georgia, "Times New Roman", Times, serif;
+    font-size: 50px;
+    font-weight: bold;
+    color: #00B2EE;
+    line-height: 58px;
+    margin-top: 5px;
+    margin: 20px;
+    float: left;
+    position: absolute;
+}
+
 
 /*footer部分结束*/
