--- a/views/company/comDetail.html
+++ b/views/company/comDetail.html
@@ -16,24 +16,18 @@
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
-
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
                     <ul class="nav navbar-nav">
                         <li><a href="#">欢迎来到同城家教</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-
                         <form class="navbar-form navbar-left">
                             <a href="/login" class="btn ">登陆</a>
                             <a href="/register" class="btn ">注册</a>
                         </form>
-
-
                         <li><a href="/logout">退出</a></li>
                         <li><a href="/require">招聘要求</a></li>
-
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -45,8 +39,7 @@
         <div class="search-left">同城家教</div>
     </div>
     <div class="main-content container" style="width:998px; border-left:1px solid #ddd; border-right:1px solid #ddd;">
-
-        <div class="cont-qz">
+        <div class="cont-qz" id="teacherInfo">
             <div class="personInfo">
                 <h2 class="name"><span style="float:left;">张峰</span>&nbsp;&nbsp;<span>女</span>
                 </h2>
@@ -54,11 +47,9 @@
                     <li class="">本科</li>
                     <li class="noborder">10年以上工作经验</li>
                 </ul>
-
                 <div class="youdian">
                     自我介绍Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum nisi nesciunt perferendis ab magnam sunt id, nobis omnis odit quas eius fuga enim commodi dolorem. Officia in nobis illo magni!
                 </div>
-
                 <ul class="hope">
                     <li>期望薪资：8000-12000元</li>
                 </ul>
@@ -66,13 +57,7 @@
                     <li onclick="seePhone(35822)">查看联系方式</li>
                 </ul>
             </div>
-
-
-
-
-
             <div class="sufferInfo">
-
                 <div class="title-s"><span class="b-t">工作经历</span></div>
                 <ul class="info">
                     <li>96年09月 - 至今</li>
@@ -86,18 +71,11 @@
                     <li>扬州大学</li>
                     <li class="noborder">数学教育</li>
                 </ul>
-
-
-
             </div>
-
         </div>
-
     </div>
-
-
-
-
+    <script src="/node_modules/jquery/dist/jquery.js"></script>
+    <script src="/public/js/company/comDetail.js"></script>
 </body>
 
 </html>
