--- a/views/administrator/company_add.html
+++ b/views/administrator/company_add.html
@@ -73,18 +73,18 @@
                         <div class="form-group">
                             <label for="" class="col-xs-3 control-label">密码</label>
                             <div class="col-xs-4">
-                                <input type="password" class="form-control input-sm" name="tc_pass" placeholder="请输入密码">
+                                <input type="password" class="form-control input-sm" name="password" placeholder="请输入密码">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="" class="col-xs-3 control-label">昵称</label>
                             <div class="col-xs-4">
-                                <input type="text" class="form-control input-sm" placeholder="请输入昵称" name="email">
+                                <input type="text" class="form-control input-sm" placeholder="请输入昵称" name="username">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-xs-7">
-                                <a href="./advert_list.html" class="btn btn-success btn-sm pull-right " id="add"> 添 加 </a>
+                                <a href="#" class="btn btn-success btn-sm pull-right " id="add"> 添 加 </a>
                             </div>
                         </div>
                     </form>
@@ -92,16 +92,18 @@
             </div>
         </div>
     </div>
+    <script src="/public/assets/jquery/jquery.js"></script>
     <script>
-        $("#add").on("click", function() {
+        $("#add").on("click", function(e) {
+            e.preventDefault();
             var formId = $("#formId").serialize();
             $.ajax({
                 type: "post",
-                url: "/api/teacher/teacher_add",
+                url: "../administrator/queryCompanyAdd",
                 data: formId,
                 dataType: "json",
                 success: function(data) {
-                    console.log(data);
+                    window.location.href = "/userCompany/company"
                 },
                 error: function() {
                     console.log(111);
