--- a/views/administrator/home.html
+++ b/views/administrator/home.html
@@ -85,7 +85,7 @@
                                 <td>例如</td>
                                 <td>
                                     <a href="#teacherModal" data-toggle="modal" class="btn btn-info btn-xs">查 看</a>
-                                    <a href="javascript::" class="btn btn-warning btn-xs">删 除</a>
+                                    <a href="" class="btn btn-warning btn-xs">删 除</a>
                                 </td>
                             </tr>
                         </tbody>
@@ -121,6 +121,8 @@
         </div>
     </div>
 </body>
+<script src='/public/assets/jquery/jquery.js'></script>
+<script src="/public/assets/bootstrap/js/bootstrap.js"></script>
 
 </html>
 <script>
