--- a/views/administrator/company_add.html
+++ b/views/administrator/company_add.html
@@ -35,7 +35,7 @@
         <!-- 个人资料 -->
         <div class="profile">
             <!-- 头像 -->
-            <h4>布头儿</h4>
+            <h4>同城家教</h4>
         </div>
         <!-- 导航菜单 -->
         <div class="navs">
@@ -64,6 +64,7 @@
                 </ol>
                 <div class="teacher-add">
                     <form action="" class="form-horizontal col-xs-offset-2" id="formId">
+                        <input type="hidden" name="type" value="2">
                         <div class="form-group">
                             <label for="" class="col-xs-3 control-label">邮箱</label>
                             <div class="col-xs-4">
