--- a/views/administrator/company.html
+++ b/views/administrator/company.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>学IT - 后台管理系统</title>
+    <link rel="stylesheet" href="/public/assets/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="/public/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/public/less/index.css">
 </head>
@@ -35,7 +36,7 @@
         <!-- 个人资料 -->
         <div class="profile">
             <!-- 头像 -->
-            <h4>布头儿</h4>
+            <h4>同城家教</h4>
         </div>
         <!-- 导航菜单 -->
         <div class="navs">
@@ -65,7 +66,7 @@
                     <li><a href="javascript:;">公司列表</a></li>
                 </ol>
                 <div class="page-title">
-                    <a href="/userCompany/company_add" class="btn btn-success btn-sm pull-right">添加讲师</a>
+                    <a href="/userCompany/company_add" class="btn btn-success btn-sm pull-right">添加公司</a>
                 </div>
                 <div class="panel panel-default">
                     <table class="table table-striped table-bordered table-hover">
@@ -96,8 +97,7 @@
                 </div>
                 <div class="panel-body">
                     <table class="table table-bordered table-condensed">
-                        <tbody id="teacherModal">
-
+                        <tbody id="userModel">
                         </tbody>
                     </table>
                 </div>
@@ -118,13 +118,17 @@
         <td colspan="3">{{value.username}}</td>
         <td class="teacherBtns" data-id='{{value.id}}' data-type='{{value.type}}'>
             <a href="#teacherModal" data-toggle="modal" class="btn btn-info btn-xs">查 看</a>
-            <a href="javascript::" class="btn btn-warning btn-xs">删 除</a>
+            <a href="javascript:void(0)" class="btn btn-warning btn-xs">删 除</a>
         </td>
     </tr>
     {{/each}}
 </script>
 <script type="text/template" id='teacherInfoModal'>
     {{each data as value}}
+    <tr>
+        <th>id</th>
+        <td>{{value.id}}</td>
+    </tr>
     <tr>
         <th>邮箱</th>
         <td>{{value.email}}</td>
@@ -156,20 +160,40 @@
 
             $(".teacherBtns").find("a:eq(0)").click(function() {
                 var id = $(this).parents('td').attr('data-id');
+                var url = "/administrator/queryCompanyModel";
+                console.log(id);
                 $.ajax({
-                    type: "get",
+                    type: "post",
                     // 接口地址
-                    url: "/administrator/queryCompanyModel",
+                    url: url,
                     data: {
                         id: id
                     },
                     dataType: "json",
                     success: function(data) {
-                        console.log(1);
+                        console.log(data)
                         var html = template('teacherInfoModal', {
                             data: data
                         });
-                        $('#teacherModal').html(html);
+                        $('#userModel').html(html);
+                    }
+                })
+            })
+
+            $(".teacherBtns").find("a:eq(1)").click(function() {
+                var id = $(this).parents('td').attr('data-id');
+                var url = "/administrator/queryCompanyDelete";
+                console.log(id);
+                $.ajax({
+                    type: "post",
+                    // 接口地址
+                    url: url,
+                    data: {
+                        id: id
+                    },
+                    dataType: "json",
+                    success: function(data) {
+                        window.location.href = "/userCompany/company"
                     }
                 })
             })
