--- a/views/administrator/home.html
+++ b/views/administrator/home.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>学IT - 后台管理系统</title>
+    <link rel="stylesheet" href="/public/assets/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="/public/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/public/less/index.css">
 </head>
@@ -35,7 +36,7 @@
         <!-- 个人资料 -->
         <div class="profile">
             <!-- 头像 -->
-            <h4>布头儿</h4>
+            <h4>同城家教</h4>
         </div>
         <!-- 导航菜单 -->
         <div class="navs">
@@ -65,7 +66,7 @@
                     <li><a href="javascript:;">应聘者列表</a></li>
                 </ol>
                 <div class="page-title">
-                    <a href="/userApplicant/add" class="btn btn-success btn-sm pull-right">添加讲师</a>
+                    <a href="/userApplicant/add" class="btn btn-success btn-sm pull-right">添加应聘者</a>
                 </div>
                 <div class="panel panel-default">
                     <table class="table table-striped table-bordered table-hover">
@@ -77,17 +78,8 @@
                                 <th>昵称</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>15732071175@163.com</td>
-                                <td>111</td>
-                                <td>例如</td>
-                                <td>
-                                    <a href="#teacherModal" data-toggle="modal" class="btn btn-info btn-xs">查 看</a>
-                                    <a href="" class="btn btn-warning btn-xs">删 除</a>
-                                </td>
-                            </tr>
+                        <tbody id="tplApplicant">
+
                         </tbody>
                     </table>
                 </div>
@@ -105,25 +97,108 @@
                 </div>
                 <div class="panel-body">
                     <table class="table table-bordered table-condensed">
-                        <tbody>
-                            <tr>
-                                <th>邮箱</th>
-                                <td>123@123</td>
-                            </tr>
-                            <tr>
-                                <th>昵称:</th>
-                                <td colspan="3">例如</td>
-                            </tr>
+                        <tbody id="userApplicantModel">
                         </tbody>
                     </table>
                 </div>
             </div>
         </div>
     </div>
+
 </body>
-<script src='/public/assets/jquery/jquery.js'></script>
+<script src="/public/assets/jquery/jquery.js"></script>
+<script src="/public/assets/artTemplate/template.js"></script>
 <script src="/public/assets/bootstrap/js/bootstrap.js"></script>
+<script type="text/template" id="ApplicantTpl">
+    {{each data as value}}
+    <tr>
+        <th>邮箱</th>
+        <td>{{value.email}}</td>
+        <th>昵称:</th>
+        <td colspan="3">{{value.username}}</td>
+        <td class="teacherBtns" data-id='{{value.id}}' data-type='{{value.type}}'>
+            <a href="#teacherModal" data-toggle="modal" class="btn btn-info btn-xs">查 看</a>
+            <a href="javascript:void(0)" class="btn btn-warning btn-xs">删 除</a>
+        </td>
+    </tr>
+    {{/each}}
+</script>
+<script type="text/template" id='ApplicantInfoModal'>
+    {{each data as value}}
+    <tr>
+        <th>id</th>
+        <td>{{value.id}}</td>
+    </tr>
+    <tr>
+        <th>邮箱</th>
+        <td>{{value.email}}</td>
+    </tr>
+    <tr>
+        <th>昵称:</th>
+        <td colspan="3">{{value.username}}</td>
+    </tr>
+    <tr>
+        <th>类型:</th>
+        <td colspan="3">{{value.type}}</td>
+    </tr>
+    {{/each}}
+</script>
+<script>
+    $.ajax({
+        type: 'get',
+        url: '../administrator/queryApplicantInfo',
+        dataType: 'json',
+        success: function(data) {
+            // var data = $.makeArray(data);
+            // console.log(data);
+            // console.log(data[0])
+            var html = template('ApplicantTpl', {
+                data: data
+            });
+            // console.log(html);
+            $("#tplApplicant").html(html);
+
+            $(".teacherBtns").find("a:eq(0)").click(function() {
+                var id = $(this).parents('td').attr('data-id');
+                var url = "/administrator/queryApplicantModel";
+                console.log(id);
+                $.ajax({
+                    type: "post",
+                    // 接口地址
+                    url: url,
+                    data: {
+                        id: id
+                    },
+                    dataType: "json",
+                    success: function(data) {
+                        console.log(data)
+                        var html = template('ApplicantInfoModal', {
+                            data: data
+                        });
+                        $('#userApplicantModel').html(html);
+                    }
+                })
+            })
+
+            $(".teacherBtns").find("a:eq(1)").click(function() {
+                var id = $(this).parents('td').attr('data-id');
+                var url = "/administrator/queryApplicantDelete";
+                console.log(id);
+                $.ajax({
+                    type: "post",
+                    // 接口地址
+                    url: url,
+                    data: {
+                        id: id
+                    },
+                    dataType: "json",
+                    success: function(data) {
+                        window.location.href = "/userApplicant/admin"
+                    }
+                })
+            })
+        }
+    })
+</script>
 
 </html>
-<script>
-</script>
